<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/dueling_worlds_quick_app"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/duelingworlds_512"
            android:onClick="openBrowser"
            android:tag="https://home.duelingworlds.com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_duelingworlds_512" />

        <TextView
            android:id="@+id/dwiHomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/dueling_worlds_international_home_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/dwiLogin"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/duelingworlds_512"
            android:onClick="openBrowser"
            android:tag="https://home.duelingworlds.com/login-for-the-dueling/"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dwiHomeTextView"
            app:srcCompat="@drawable/ic_duelingworlds_512" />

        <TextView
            android:id="@+id/dwiLoginTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/dueling_worlds_international_login_register_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dwiLogin" />

        <ImageView
            android:id="@+id/bseImageLogo"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/bse_512"
            android:onClick="openBrowser"
            android:tag="https://bse.duelingworlds.com/"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dwiLoginTextView"
            app:srcCompat="@drawable/ic_bse_512" />

        <TextView
            android:id="@+id/bseHomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/brayton_scott_entertainment_home_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bseImageLogo" />

        <ImageView
            android:id="@+id/bsmeImageLogo"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/bsme_512"
            android:onClick="openBrowser"
            android:tag="https://bsme.duelingworlds.com/"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bseHomeTextView"
            app:srcCompat="@drawable/ic_bsme_512" />

        <TextView
            android:id="@+id/bsmeHomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/brayton_scott_music_entertainment_home_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bsmeImageLogo" />

        <ImageView
            android:id="@+id/dwiWebApp"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/duelingworlds_512"
            android:onClick="openBrowser"
            android:tag="https://web.duelingworlds.com/"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bsmeHomeTextView"
            app:srcCompat="@drawable/ic_duelingworlds_512" />

        <TextView
            android:id="@+id/dwiWebAppTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/web_app_design_development_home_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dwiWebApp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>